--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         
       </div>
-      <i class="fa-brands render-2 fa-github fa-2xl" style="color: rgb(38, 14, 161);"></i>
+      <a href="https://wa.me/qr/AH2HYIL2H5EYG1"><i class="fa-brands render-2 fa-whatsapp fa-2xl" style="color: rgb(70, 31, 246);"></i></a>
 
 
 
