--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="about-line">
           <div class="detail">
             <img src="my DP.jpg" alt="" class="lower-profile">
-            <h4 class="detail-item">Full Name: <i class="one">Paul Miracle Tochukwu Nwodo</i></h4>
+            <h4 class="detail-item">Full Name: <i class="one">Paul Tochukwu Nwodo</i></h4>
             <h4 class="detail-item">Phone Number: <i class="one">+234 8100 732 708</i></h4>
             <h4 class="detail-item">Email: <i class="one">paulnwodotochukwu180@gmail.com</i></h4>
             <h4 class="detail-item">Addess: <i class="one">Enugu state, <span class="color">Nigeria</span></small></h4>
