--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="resume-section">
         <h2 class="resume">My Resume</h2>
 
-        <h2 class="education"><span>Education</span></h2>
+        <h2 class="education"><span>Skills</span></h2>
 
 
         <div class="resume-container">
